BREAKING CHANGE(server): disable legacy backends include `MySQL/PG/c*`(.etc) (#2746)
* disable Cassandra、MySQL、Postgre、scyllaDB、palo backend